// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModeSelect adds expected options to select when language is DE 1`] = `
[
  {
    "name": "Herrschaft",
    "value": "Splat Zones",
  },
  {
    "name": "Muschelchaos",
    "value": "Clam Blitz",
  },
  {
    "name": "Operation Goldfisch",
    "value": "Rainmaker",
  },
  {
    "name": "Revierkampf",
    "value": "Turf War",
  },
  {
    "name": "Turmkommando",
    "value": "Tower Control",
  },
  {
    "name": "Unbekannte Kampfart",
    "value": "Unknown Mode",
  },
]
`;

exports[`ModeSelect adds expected options to select when language is EN 1`] = `
[
  {
    "name": "Clam Blitz",
    "value": "Clam Blitz",
  },
  {
    "name": "Rainmaker",
    "value": "Rainmaker",
  },
  {
    "name": "Splat Zones",
    "value": "Splat Zones",
  },
  {
    "name": "Tower Control",
    "value": "Tower Control",
  },
  {
    "name": "Turf War",
    "value": "Turf War",
  },
  {
    "name": "Unknown Mode",
    "value": "Unknown Mode",
  },
]
`;
